# SlaveRepo

./: CMakeLists.txt  slave.cpp  slave.h  slave_generate.cpp
